Fixed overflow issue on hp

--- a/assets/scss/global/_global.scss
+++ b/assets/scss/global/_global.scss
@@ -1,8 +1,8 @@
 @use "../vars/variables" as *;
+@use 'sass-mq' as * with ($breakpoints: (desktop: 1280px));
 
 html, body {
     height: 100%;
-    //overflow: hidden;
     overscroll-behavior: none;
 }
 
@@ -23,8 +23,6 @@ body {
         grid-template-rows: 1fr 1fr;
     }
 }
-
-
 
 .main {
     .home & {
@@ -59,11 +57,15 @@ body {
     display: block;
     font-family: var(--header-font);
     font-size: var(--font-xl);
-    padding-bottom: 100px;
     text-transform: uppercase;
     text-align: center;
     line-height: 0.76;
+    padding-bottom: 40px;
     text-align: center;
     color: inherit;
     width: 100%;
+
+    @include mq($from: desktop) {
+            padding-bottom: 100px;
+        }
 }
